# src/jp/ac/shibaura/it/ie/domain/model/chat/Message.java
@@ -5,12 +5,16 @@ import java.util.List;
 public class Message {
     private String messageId;
     private String postedUser;
-    private String imageId;
+    private String imageUrl;
+    private String fileName;
+    private String fileExtension;
     private List<Stamp> stampList;
-    public Message(String messageId, String postedUser, String imageId){
+    public Message(String messageId, String postedUser, String imageUrl, String fileName, String fileExtension){
         this.messageId = messageId;
         this.postedUser = postedUser;
-        this.imageId = imageId;
+        this.imageUrl = imageUrl;
+        this.fileName = fileName;
+        this.fileExtension = fileExtension;
     }
 
     public String getMessageId() {
@@ -18,10 +22,18 @@ public class Message {
     }
 
     public String getImageId() {
-        return imageId;
+        return imageUrl;
     }
 
     public String getPostedUser() {
         return postedUser;
+    }
+
+    public String getFileExtension() {
+        return fileExtension;
+    }
+
+    public String getFileName() {
+        return fileName;
     }
 }
